# simplistic_DVR

./: CMakeLists.txt  README.md
data/: datau8.raw
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/include/: consts.h  shading.h  tf_tables.h  utils.h  vbocube.h  vborectangle.h
src/shaders/: canvas.vert  canvas_dvr.frag  canvas_iso.frag  shader3d.frag  shader3d.vert
